[package]
name = "tracing-serde-wire"
version = "0.1.1"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jamesmunns/tracing-serde-wire"
description = "Wire types for use with tracing-serde-structured crate"
license = "Apache-2.0"
categories = [
    "no-std",
]
keywords = [
    "tracing"
]
documentation = "https://docs.rs/tracing-serde-wire/"


[package.metadata.docs.rs]
all-features = true

[dependencies]

[dependencies.serde]
version = "1.0.137"
default-features = false
features = ["derive"]

[dependencies.tracing-serde-structured]
version = "0.1"
default-features = false
